--- a/package.json
+++ b/package.json
@@ -25,50 +25,65 @@
     "dep-graph": "nx dep-graph",
     "help": "nx help"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,md,ts,tsx,html,graphql}": [
+      "yarn affected:lint --uncommitted --parallel --fix=true",
+      "yarn format:write --uncommitted"
+    ]
+  },
   "private": true,
   "dependencies": {
+    "antd": "^4.6.6",
     "document-register-element": "1.13.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^6.8.6",
     "react-is": "16.13.1",
     "styled-components": "5.1.1"
   },
   "devDependencies": {
-    "@nrwl/workspace": "10.2.1",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.9.3",
-    "prettier": "2.0.4",
-    "@nrwl/react": "10.2.1",
-    "@nrwl/jest": "10.2.1",
-    "jest": "26.2.2",
-    "@types/jest": "26.0.8",
-    "ts-jest": "26.1.4",
-    "cypress": "^4.1.0",
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "7.9.6",
+    "@babel/preset-react": "7.9.4",
+    "@babel/preset-typescript": "7.9.0",
     "@nrwl/cypress": "10.2.1",
+    "@nrwl/eslint-plugin-nx": "10.2.1",
+    "@nrwl/jest": "10.2.1",
+    "@nrwl/react": "10.2.1",
     "@nrwl/web": "10.2.1",
+    "@nrwl/workspace": "10.2.1",
+    "@testing-library/react": "10.4.1",
+    "@types/jest": "26.0.8",
+    "@types/node": "~8.9.4",
     "@types/react": "16.9.38",
     "@types/react-dom": "16.9.8",
-    "@testing-library/react": "10.4.1",
-    "@nrwl/eslint-plugin-nx": "10.2.1",
-    "@typescript-eslint/parser": "2.19.2",
+    "@types/react-is": "16.7.1",
+    "@types/styled-components": "5.1.0",
     "@typescript-eslint/eslint-plugin": "2.19.2",
+    "@typescript-eslint/parser": "2.19.2",
+    "babel-jest": "26.2.2",
+    "babel-plugin-styled-components": "1.10.7",
+    "cypress": "^4.1.0",
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
     "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-jsx-a11y": "6.3.1",
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.4",
-    "eslint-plugin-cypress": "^2.10.3",
-    "@babel/core": "7.9.6",
-    "@babel/preset-env": "7.9.6",
-    "@babel/preset-typescript": "7.9.0",
-    "@babel/preset-react": "7.9.4",
-    "babel-jest": "26.2.2",
-    "@types/styled-components": "5.1.0",
-    "@types/react-is": "16.7.1",
-    "babel-plugin-styled-components": "1.10.7"
+    "husky": "^4.3.0",
+    "jest": "26.2.2",
+    "lint-staged": "^10.4.0",
+    "prettier": "2.0.4",
+    "ts-jest": "26.1.4",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.9.3"
   }
 }
